--- a/cv.html
+++ b/cv.html
@@ -68,14 +68,14 @@
 
             <div class="grid-container-2-col">
                 <article>
-                    <h4 class="right-align cv-duration-text">
+                    <h4 class="text-right-align cv-duration-text">
                         2022-2024
                     </h4>
-                    <h3 class="right-align">
+                    <h3 class="text-right-align">
                         It Högskolan Göteborg <br>
                         UX Design
                     </h3>
-                    <p class="right-align">
+                    <p class="text-right-align">
                         Human Computer Interaction med all vad det innebär; <br>
                         UX, IA, IxD, UI. Agilt arbete. Portfolio. Webbdesign, appdesign & fysisk usability. Programmering för
                         UXare. Praktik.
@@ -102,14 +102,14 @@
             </div>
             <div class="grid-container-2-col">
                 <article>
-                    <h4 class="right-align cv-duration-text">
+                    <h4 class="text-right-align cv-duration-text">
                         2018-2020
                     </h4>
-                    <h3 class="right-align">
+                    <h3 class="text-right-align">
                         Stångby Plantskola <br>
                         Inköpare
                     </h3>
-                    <p class="right-align">
+                    <p class="text-right-align">
                         En av de största träd- och buskplantskolorna i Sverige. <br>
                         Inköpare av vedartat material från Tyskland, Holland och Danmark samt kollegor i Sverige. <br>
                         Inköp direkt från order. Affärssystem, leverantörskontrakt, fraktbokningar. Offerter. <br>
@@ -138,14 +138,14 @@
             </div>
             <div class="grid-container-2-col">
                 <article>
-                    <h4 class="right-align cv-duration-text">
+                    <h4 class="text-right-align cv-duration-text">
                         2009-212
                     </h4>
-                    <h3 class="right-align">
+                    <h3 class="text-right-align">
                         Sveriges Lantbruksuniversitet<br>
                         Trädgårdsingenjörsprogrammet
                     </h3>
-                    <p class="right-align">
+                    <p class="text-right-align">
                         Treårig högskoleutbildning inom hortikultur/biologi. <br>
                         Valbara kurser tredje året. Bland annat trädvård, kyrkogårdsförvaltning och ståndortskännedom.
                         <br>
