--- a/plint.html
+++ b/plint.html
@@ -80,76 +80,88 @@ Plint behövde därför ta fram mer information kring hur översättarna idag jo
             </div>
             <div class="grid-container-2-col">
                 <!-- left image -->
-                <div class="col1 center">
-                    <div>
-                        <h5>Plints program för att skapa undertexter</h4>
-                        <img class="img_prj" src="assets/img/projekt/Clarity dashboard.png" alt="plint" />
+                <div class="col1 flex flex-align-end">
+                    <div class="flex flex-column flex-align-self-center" style="width: 35rem; max-width: 80%; margin-right: 1rem;">
+                        <h5>PLINTS PROGRAM FÖR ATT SKAPA UNDERTEXTER</h4>
+                        <img src="assets/img/projekt/Clarity dashboard.png" alt="plint" />
                     </div>
                 </div>
                 <!-- right image -->
-                <div class="col2 center">
-                    <div>
-                        <h5>Plints program för att skapa undertexter</h5>
-                        <img class="img_prj" src="assets/img/projekt/Clarity inspelning.png" alt="plint" />
+                <div class="col2">
+                    <div class="flex flex-column flex-align-self-center" style="width: 35rem; max-width: 80%; margin-left: 1rem;">
+                        <h5>PLINTS PROGRAM FÖR ATT SKAPA UNDERTEXTER</h5>
+                        <img src="assets/img/projekt/Clarity inspelning.png" alt="plint" />
                     </div>
                 </div>
-
             </div>
 
-            <div class="grid-container-2-col">
-                <article>
-                    <h4 class="right-align cv-duration-text">
-                        2018-2020
-                    </h4>
-                    <h3 class="right-align">
-                        Stångby Plantskola <br>
-                        Inköpare
-                    </h3>
-                    <p class="right-align">
-                        En av de största träd- och buskplantskolorna i Sverige. <br>
-                        Inköpare av vedartat material från Tyskland, Holland och Danmark samt kollegor i Sverige. <br>
-                        Inköp direkt från order. Affärssystem, leverantörskontrakt, fraktbokningar. Offerter. <br>
-                        Ansvar för reklamationer mot producent samt IT. <br>
-                        Även fotografering och Instagramkonto.
-                    </p>
-                    <br>
-                </article>
-            </div>
             <div class="grid-container-2-col">
                 <article class="col2">
-                    <h4 class="cv-duration-text">
-                        2016-2018
-                    </h4>
-                    <h3>
-                        Trädgårdsakademin<br>
-                        Arbetsledning grönyteförvaltning
+                    <h3 class="">
+                        VERKTYG
                     </h3>
+                    <ul>
+                        <li>Jira och Kanban</li>
+                        <li>Arbete i sprintar</li>
+                        <li>Clarity och Figma</li>
+                        <li>Plints egna program för undertexter</li>
+                        <li>Seminstrukturerade intervjuer</li>
+                        <li>Affinity Diagram</li>
+                        <li>Personas/ användarmål</li>
+                    </ul>
+                    <br>
+                </article>
+            </div>
+            <div class="grid-container-2-col">
+                <img class="img_prj col1-2 center" width="813px" src="assets/img/projekt/redovisning.png" alt="plint" />
+            </div>
+            <div class="grid-container-2-col">
+                <article class="col1 text-right-align">
+                    <h3>Kontextuella intervjuer</h3>
+                    <p>Data från observationerna i Clarity användes som underlag till nästa projekt.Fyra semistrukturerade intervjuer genomfördes med fyra användare som översätter undertexter i fyra olika nordiska språk.
+                        Användarna utförde en tilldelad uppgift i undertextprogrammet samtidigt som intervjun pågick.</p>
+                    <br>
+                </article>
+            </div>
+            <div class="grid-container-2-col">
+                <img class="img_prj col1-2 center" width="813px" src="assets/img/projekt/inspelning.png" alt="plint" />
+            </div>
+
+            <div class="grid-container-2-col">
+                <article class="col2">
+                    <h3>Affinity diagrams</h3>
                     <p>
-                        Yrkeshögskola. <br>
-                        Offentlig upphandling, arbetsledning, arbetsmiljökunskap,<br>
-                        praktik/LIA, kalkylering, entreprenadjuridik osv.
+                        För att få ut data kring användarnas arbetssätt, navigering, mål och upplevelse, användes analysmetoden Affinity Diagram. Genom att gruppera utvald information från intervjuerna efter hur de hör ihop, går det att få ut genomgående mönster kring användarnas upplevelse av en tjänst eller program.
                     </p>
                     <br>
                 </article>
             </div>
             <div class="grid-container-2-col">
-                <article>
-                    <h4 class="right-align cv-duration-text">
-                        2009-212
-                    </h4>
-                    <h3 class="right-align">
-                        Sveriges Lantbruksuniversitet<br>
-                        Trädgårdsingenjörsprogrammet
-                    </h3>
-                    <p class="right-align">
-                        Treårig högskoleutbildning inom hortikultur/biologi. <br>
-                        Valbara kurser tredje året. Bland annat trädvård, kyrkogårdsförvaltning och ståndortskännedom.
-                        <br>
-                        Kandidatarbete 15 HP.<br>
-                        Examen i biologi.
-                    </p>
-                </article>
+                <div class="col1-2 flex flex-center flex-column">
+                    <div class="flex flex-column flex-align-self-center" style="width: 70%;">
+                        <h5>Plints program för att skapa undertexter</h4>
+                        <img src="assets/img/projekt/affinity_diagram.png" alt="plint" />
+                    </div>
+                </div>
             </div>
+           
+            <div class="grid-container-2-col">
+                <!-- left image -->
+                <div class="col1 flex flex-align-end">
+                    <div class="flex flex-column flex-align-self-center" style="width: 35rem; max-width: 80%; margin-right: 1rem;">
+                        <h5>USER FLOW</h4>
+                        <img src="assets/img/projekt/user_flow.png" alt="plint" />
+                    </div>
+                </div>
+                <!-- right image -->
+                <div class="col2">
+                    <div class="flex flex-column flex-align-self-center" style="width: 35rem; max-width: 80%; margin-left: 1rem;">
+                        <h5 class="text-right-align">REDOVISNING</h5>
+                        <img src="assets/img/projekt/audience.png" alt="plint" />
+                    </div>
+                </div>
+            </div>
+
         </section>
     </div>
 </body>
