--- a/utbildning.html
+++ b/utbildning.html
@@ -35,7 +35,7 @@
 
 
 <body class="body_education">
-    <div class="padding-1 right-align">
+    <div class="padding-1 text-right-align">
         <section class="grid-container-2-col right">
             <h3 class="col1">
                 IT Högskolan
