--- a/plint.html
+++ b/plint.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Montserrat&display=swap" rel="stylesheet">
     <title>Ragnas Portfolio CV</title>
 </head>
 
@@ -89,7 +94,7 @@ Plint behövde därför ta fram mer information kring hur översättarna idag jo
                 <!-- right image -->
                 <div class="col2">
                     <div class="flex flex-column flex-align-self-center" style="width: 35rem; max-width: 80%; margin-left: 1rem;">
-                        <h5>PLINTS PROGRAM FÖR ATT SKAPA UNDERTEXTER</h5>
+                        <h5 class="text-right-align" >PLINTS PROGRAM FÖR ATT SKAPA UNDERTEXTER</h5>
                         <img src="assets/img/projekt/Clarity inspelning.png" alt="plint" />
                     </div>
                 </div>
