--- a/plint.html
+++ b/plint.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Montserrat&display=swap" rel="stylesheet">
-    <title>Ragnas Portfolio CV</title>
+    <title>Plint - UX Research</title>
 </head>
 
 <!-- HEADER -->
@@ -22,8 +22,8 @@
     <div class="image_and_menu_container">
         <div class="header_image_text_small">
             <img class="header_image_small" src="/assets/img/header 2.jpg" alt="header" />
-            <h1 class="header_text_centered">
-                CV
+            <h1 class="header_text_right">
+                UX Research
             </h1>
         </div>
         <nav class="menu_box">
@@ -38,7 +38,7 @@
     </div>
 </header>
 
-<body class="body_cv">
+<body class="body_plint">
 
         <section class="flex flex-column">
 
