--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
     <div class="image_and_menu_container">
         <div class="header_image_text_small">
             <img class="header_image_small" src="/assets/img/header 2.jpg" alt="header" />
-            <h1 class="header_text_centered">
+            <h1 class="header_text_right">
                 CV
             </h1>
         </div>
