--- a/utbildning.html
+++ b/utbildning.html
@@ -22,7 +22,7 @@
     <div class="image_and_menu_container">
         <div class="header_image_text_small">
             <img class="header_image_small" src="assets/img/header utbildning.jpg" alt="header" />
-            <h1 class="header_text_centered">
+            <h1 class="header_text_right">
                 Kurser
             </h1>
         </div>
