- Uppdaterade bilder - Skugga + rundning på bilder

--- a/plint.html
+++ b/plint.html
@@ -62,7 +62,7 @@
             </article>
         </div>
         <div class="grid-container-2-col">
-            <img class="img_prj col1-2 center" width="813px" src="assets/img/projekt/Ragna och Erika - plint.png"
+            <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/ragnaEricaSelfie.png"
                 alt="Bild av Ragna och Erica under praktiken på Plint" />
         </div>
         <div class="grid-container-2-col">
@@ -79,7 +79,7 @@
             </article>
         </div>
         <div class="grid-container-2-col">
-            <img class="img_prj col1-2 center" width="813px" src="assets/img/projekt/good-enough.png" alt="Presentation slide - 'Good enough'" />
+            <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/slide7redovisning.png" alt="Presentation slide - 'Good enough'" />
         </div>
         <div class="grid-container-2-col">
             <article class="col1 text-right-align">
@@ -98,7 +98,7 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-right: 1rem;">
                     <h5>PLINTS PROGRAM FÖR ATT SKAPA UNDERTEXTER</h4>
-                        <img src="assets/img/projekt/Clarity dashboard.png" alt="Skärmdump av Plints program för att skapa undertexter" />
+                        <img class="img_prj" src="assets/img/projekt/clarityScreenshot.png" alt="Skärmdump av Plints program för att skapa undertexter" />
                 </div>
             </div>
             <!-- right image -->
@@ -106,8 +106,7 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-left: 1rem;">
                     <h5 class="text-right-align">CLARITY DASHBOARD</h5>
-                    <!-- <button class="lvideo" data-url="https://www.youtube.com/watch?v=eRhFCgnmTLI">Play Youtube Video</button> -->
-                    <img class="lvideo" data-url="https://www.youtube.com/watch?v=eRhFCgnmTLI" src="assets/img/projekt/Clarity inspelning.png" alt="Skärmdump av Clarity dashboard" />
+                    <img class="img_prj" class="lvideo" data-url="https://www.youtube.com/watch?v=eRhFCgnmTLI" src="assets/img/projekt/clarityDashboard.png" alt="Skärmdump av Clarity dashboard" />
                 </div>
             </div>
         </div>
@@ -130,7 +129,7 @@
             </article>
         </div>
         <div class="grid-container-2-col">
-            <img class="img_prj col1-2 center" width="813px" src="assets/img/projekt/redovisning.png" alt="Slide från presentation av praktiken - visar 'andra slutsatser'" />
+            <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/slide3timeCodingAnalysis.png" alt="Slide från presentation av praktiken - visar 'andra slutsatser'" />
         </div>
         <div class="grid-container-2-col">
             <article class="col1 text-right-align">
@@ -142,7 +141,7 @@
             </article>
         </div>
         <div class="grid-container-2-col">
-            <img class="img_prj col1-2 center" width="813px" src="assets/img/projekt/inspelning.png" alt="Skärmdump av inspelning" />
+            <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/screenshotUserInterview.png" alt="Skärmdump av inspelning" />
         </div>
 
         <div class="grid-container-2-col">
@@ -160,8 +159,8 @@
         <div class="grid-container-2-col">
             <div class="col1-2 flex flex-center flex-column">
                 <div class="flex flex-column flex-align-self-center" style="width: 70%;">
-                    <h5>Affinity diagrams</h4>
-                        <img src="assets/img/projekt/affinity_diagram.png" alt="Bild av 'Affinity diagram'" />
+                    <h5>AFFINITY DIAGRAMS</h4>
+                        <img class="img_prj" src="assets/img/projekt/affinityDiagram.png" alt="Bild av 'Affinity diagram'" />
                 </div>
             </div>
         </div>
@@ -172,7 +171,7 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-right: 1rem;">
                     <h5>USER FLOW</h4>
-                        <img src="assets/img/projekt/user_flow.png" alt="Flödesschema - 'User flow'" />
+                        <img class="img_prj" src="assets/img/projekt/userflow.png" alt="Flödesschema - 'User flow'" />
                 </div>
             </div>
             <!-- right image -->
@@ -180,7 +179,7 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-left: 1rem;">
                     <h5 class="text-right-align">REDOVISNING</h5>
-                    <img src="assets/img/projekt/audience.png" alt="Foto av Ragna och Erika under deras redovisning på praktiken" />
+                    <img class="img_prj" src="assets/img/projekt/audience.png" alt="Foto av Ragna och Erika under deras redovisning på praktiken" />
                 </div>
             </div>
         </div>
