--- a/plint.html
+++ b/plint.html
@@ -98,7 +98,7 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-right: 1rem;">
                     <h5>PLINTS PROGRAM FÖR ATT SKAPA UNDERTEXTER</h4>
-                        <img class="img_prj" src="assets/img/projekt/clarityScreenshot.png" alt="Skärmdump av Plints program för att skapa undertexter" />
+                        <img class="img_prj lvideo" data-url="https://www.youtube.com/watch?v=eRhFCgnmTLI" src="assets/img/projekt/clarityScreenshot.png" alt="Skärmdump av Plints program för att skapa undertexter" />
                 </div>
             </div>
             <!-- right image -->
@@ -106,7 +106,7 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-left: 1rem;">
                     <h5 class="text-right-align">CLARITY DASHBOARD</h5>
-                    <img class="img_prj" class="lvideo" data-url="https://www.youtube.com/watch?v=eRhFCgnmTLI" src="assets/img/projekt/clarityDashboard.png" alt="Skärmdump av Clarity dashboard" />
+                    <img class="img_prj" src="assets/img/projekt/clarityDashboard.png" alt="Skärmdump av Clarity dashboard" />
                 </div>
             </div>
         </div>
