- Uppdaterad plint.html

--- a/plint.html
+++ b/plint.html
@@ -42,7 +42,19 @@
 <body class="body_plint">
 
     <section class="flex flex-column">
-
+        <div class="grid-container-2-col">
+            <article class="col1 text-right-align">
+                <h3>Praktik - Plint AB</h3>
+                <h3>Hur jobbar en linguist?</h3>
+                <p>Plint hanterar uppdrag och distribution av undertexter, översättningar, dubbing och annat textmaterial för rörlig media. De förmedlar undertext-uppdrag från företag inom film- och TV, till frilansande översättare via en egen jobbank.
+                    De tillhandahåller ett eget program för  editering av undertexter och översättning</p>
+                <br>
+            </article>
+        </div>
+        <div class="grid-container-2-col">
+            <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/partofthebiggerpicture.png"
+                alt="Bild av Ragna och Erica under praktiken på Plint" />
+        </div>
         <div class="grid-container-2-col">
             <article class="col2">
 
