Lagt till bilder + justerat text
Lagt in bättre bilder förhoppningsvis + justerat text i htmtl

--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 
+<!-- ====================
+     HEAD
+   ==================== -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +17,9 @@
     <title>Ragnas Portfolio CV</title>
 </head>
 
-<!-- HEADER -->
+<!-- ====================
+     HEADER
+   ==================== -->
 
 <header class="header">
     <div class="header_med_logo">
@@ -27,6 +32,10 @@
                 CV
             </h1>
         </div>
+
+    <!-- ====================
+     NAV BAR
+   ==================== -->
         <nav class="menu_box">
             <!-- <p>Meny</p> -->
             <div id="menu">
@@ -39,8 +48,16 @@
     </div>
 </header>
 
+<!-- ====================
+     BODY
+   ==================== -->
+
 <body class="body_cv">
     <div class="padding-1">
+
+        <!-- ********************
+         INTERNSHIP
+        ******************** -->
         <h1 class="hello_cv">
             HELLO!
         </h1>
@@ -72,6 +89,9 @@
                 </p>
             </div>
 
+            <!-- ********************
+                 CV
+            ******************** -->
             <div class="grid-container-2-col">
                 <article>
                     <h4 class="text-right-align cv-duration-text">
@@ -163,6 +183,11 @@
         </section>
     </div>
 </body>
+
+<!-- ====================
+     FOOTER
+   ==================== -->
+
 <footer class="footer padding-1">
     <p>© Photos Ragna. Peas on earth!</p>
     <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" />
