--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" /> <br>
     </div>
 
-    <!-- header bild -->
+    <!-- HEADER -->
     <div class="image_and_menu_container">
         <div class="header_bild_med_rubrik">
-            <img class="headerbild_index" src="/assets/img/header 2.jpg" alt="header" />
+            <img class="headerbild_index" src="/assets/img/header 2.jpg" alt="headerbackground" />
             
-            <!-- Rubrik-->
+            <!-- Header text-->
             <h1 class="rubriktext_index">
                 Hej!<br>
                 Ragna Andersson<br>
@@ -50,7 +50,6 @@
 <!-- ====================
      NAV BAR
    ==================== -->
-<!-- Vill ha en meny med dessa tre länkar till höger sen, vertikalt. Får se om vi kommer så långt att jag löser det. -->
         <nav class="menu_box">
             <div id="menu">
                 <a href="index.html">hem</a>
@@ -78,6 +77,7 @@
                     Välkommen till min portfolio.
                 </h3>
             </section>
+
     <!-- ********************
          PROJECT
     ******************** -->
@@ -86,7 +86,6 @@
                 <h1 class="col2">
                     Projekt
                 </h1>
-
             </section>
             <br>
         </div>
@@ -98,7 +97,6 @@
    ==================== -->
 
 <footer class="footer padding-1">
-
     <img  class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" /> <br>
     <p>
         © Photos Ragna. Peas on earth!
