--- a/plint.html
+++ b/plint.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 
+<!-- ====================
+     HEAD
+   ==================== -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +17,9 @@
     <title>Plint - UX Research</title>
 </head>
 
-<!-- HEADER -->
+<!-- ====================
+     HEADER
+   ==================== -->
 
 <header class="header">
     <div class="header_med_logo">
@@ -22,11 +27,15 @@
     </div>
     <div class="image_and_menu_container">
         <div class="header_image_text_small">
-            <img class="header_image_small" src="/assets/img/header 2.jpg" alt="Bakgrundsbild till sidhuvud" />
+            <img class="header_image_small" src="/assets/img/header 2.jpg" alt="Header background" />
             <h1 class="header_text_right">
                 UX Research
             </h1>
         </div>
+
+    <!-- ====================
+     NAV BAR
+   ==================== -->
         <nav class="menu_box">
             <!-- <p>Meny</p> -->
             <div id="menu">
@@ -39,6 +48,10 @@
     </div>
 </header>
 
+<!-- ====================
+     BODY
+   ==================== -->
+
 <body class="body_plint">
 
     <section class="flex flex-column">
@@ -46,14 +59,21 @@
             <article class="col1 text-right-align">
                 <h3>Praktik - Plint AB</h3>
                 <h3>Hur jobbar en linguist?</h3>
-                <p>Plint hanterar uppdrag och distribution av undertexter, översättningar, dubbing och annat textmaterial för rörlig media. De förmedlar undertext-uppdrag från företag inom film- och TV, till frilansande översättare via en egen jobbank.
-                    De tillhandahåller ett eget program för  editering av undertexter och översättning</p>
+                <p><b>Plint</b><br> distribuerar översättningar, dubbing <br> 
+                    och annat textmaterial för rörlig media. <br> 
+                    De förmedlar undertextuppdrag från företag <br>
+                    inom film- och TV till frilansande översättare <br>
+                    via en egen jobbank.
+                    <br>
+                    <br>
+                    De tillhandahåller ett eget program för <br> 
+                    editering av undertexter och översättning. </p>
                 <br>
             </article>
         </div>
         <div class="grid-container-2-col">
             <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/partofthebiggerpicture.png"
-                alt="Bild av Ragna och Erica under praktiken på Plint" />
+                alt="Plint Logo" />
         </div>
         <div class="grid-container-2-col">
             <article class="col2">
@@ -62,13 +82,30 @@
                     MÅL
                 </h3>
                 <p class="">
-                    Artificiell intelligens utmanar översättarens roll kring översättning och undertexter. Kan AI ta
-                    fram felfria undertexter? - Idag finns redan maskinöversatta undertexter [machine translation]. Men
-                    hur bra fungerar de? Håller de tillräcklig språklig kvalitet?
-                    När och hur behövs då en mänsklig översättare eller linguist?
-                    Det är frågor som filmbranschen behöver ta ställning till.
-                    Plint behövde därför ta fram mer information kring hur översättarna idag jobbar för att förstå dessa
-                    utmaningar.
+                    Artificiell intelligens utmanar översättarens <br>
+                    roll kring översättning och undertexter. 
+                    <br>
+                    <br>
+                    Kan AI ta fram felfria undertexter? Idag finns<br>
+                    redan maskinöversatta undertexter <br>
+                    [machine translation]. 
+                    <br>
+                    <br>
+                    Men hur bra fungerar de? <br>
+                    Håller de tillräcklig språklig kvalitet?
+                    <br>
+                    <br>
+                    När och hur behövs då en mänsklig <br>
+                    översättare eller linguist?
+                    <br>
+                    <br>
+                    Det är frågor som filmbranschen behöver ta <br>
+                    ställning till.
+                    <br>
+                    <br>
+                    Plint behövde därför ta fram mer information <br>
+                    kring hur deras översättare jobbar för att <br>
+                    förstå dessa utmaningar.
                 </p>
                 <br>
             </article>
@@ -79,12 +116,14 @@
         </div>
         <div class="grid-container-2-col">
             <article class="col2">
-                <p>Två projekt kring dessa frågeställningar genomfördes under praktikperioden:</p>
+                <p>Två projekt kring dessa frågeställningar <br>
+                    genomfördes under praktikperioden:</p>
                 <ul>
                     <li>Observationsstudie</li>
                     <li>Semistrukurerade Intervjuer</li>
                 </ul>
-                <p>Praktiken genomfördes tillsammans med en klasskamrat.</p>
+                <p>Praktiken genomfördes tillsammans med en <br>
+                    klasskamrat.</p>
                 <h3>TID</h3>
                 <p>8 veckor. September - Oktober 2023</p>
                 <br>
@@ -96,11 +135,23 @@
         <div class="grid-container-2-col">
             <article class="col1 text-right-align">
                 <h3>Icke-deltagande observationsstudie</h3>
-                <p>Användarnas arbete med undertexter, i Plints översättningsprogram, spelas in anonymt med hjälp av
-                    analysverktyget Clarity. Inspelningarna innehåller video över användarens skärm, med musklick och
-                    rörelsemönster.Elva timmars videoinspelningar undersöktes. Ur videomaterialet insamlades information
-                    in kring arbetssätt och workflow.Informationen sammanställdes till kvantitativ data och redovisades
-                    för stakeholders på företaget. </p>
+                <p>Användarnas arbete med undertexter - <br> 
+                    i Plints översättningsprogram - spelades in <br> 
+                    anonymt med hjälp av analysverktyget Clarity.
+                    <br> 
+                    <br> 
+                    Inspelningarna innehåller video över <br> 
+                    användarens skärm, med musklick och <br> 
+                    rörelsemönster.
+                    <br> 
+                    <br> 
+                    Elva timmars videoinspelningar undersöktes. <br> 
+                    Ur videomaterialet insamlades information <br> 
+                    in kring arbetssätt och workflow.
+                    <br> 
+                    <br> 
+                    Informationen sammanställdes till kvantitativ <br> 
+                    data och redovisades för stakeholders på företaget.</p>
                 <br>
             </article>
         </div>
@@ -146,24 +197,42 @@
         <div class="grid-container-2-col">
             <article class="col1 text-right-align">
                 <h3>Kontextuella intervjuer</h3>
-                <p>Data från observationerna i Clarity användes som underlag till nästa projekt.Fyra semistrukturerade
-                    intervjuer genomfördes med fyra användare som översätter undertexter i fyra olika nordiska språk.
-                    Användarna utförde en tilldelad uppgift i undertextprogrammet samtidigt som intervjun pågick.</p>
+                <p>DData från föregående observationer användes <br> 
+                    som underlag till nästa projekt.
+                    <br>
+                    <br>
+                    Fyra semistrukturerade intervjuer <br>
+                    genomfördes med fyra användare som <br>
+                    översätter undertexter i fyra olika nordiska <br>
+                    språk.
+                     Användarna utförde en tilldelad uppgift i <br>
+                     undertextprogrammet samtidigt som <br>
+                     intervjun utfördes.</p>
                 <br>
             </article>
         </div>
         <div class="grid-container-2-col">
-            <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/screenshotUserInterview.png" alt="Skärmdump av inspelning" />
+            <img class="img_prj col1-2 center" style="max-width: 80%;" src="assets/img/projekt/screenshotUserInterview.png" alt="Skärmdump av intervjuer" />
         </div>
 
         <div class="grid-container-2-col">
             <article class="col2">
                 <h3>Affinity diagrams</h3>
                 <p>
-                    För att få ut data kring användarnas arbetssätt, navigering, mål och upplevelse, användes
-                    analysmetoden Affinity Diagram. Genom att gruppera utvald information från intervjuerna efter hur de
-                    hör ihop, går det att få ut genomgående mönster kring användarnas upplevelse av en tjänst eller
+                    För att få ut data kring användarnas <br>
+                    arbetssätt, navigering, mål och upplevelse,<br>
+                    användes analysmetoden Affinity Diagram: 
+                    <br>
+                    <br>
+                    Genom att gruppera utvald information från <br>
+                    intervjuerna efter hur de hör ihop, går det att <br>
+                    få ut genomgående mönster kring <br>
+                    användarnas upplevelse av en tjänst eller<br> 
                     program.
+                    <br>
+                    <br>
+                    Presentation av fynd för stakeholders <br>
+                    på företaget.
                 </p>
                 <br>
             </article>
@@ -183,7 +252,7 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-right: 1rem;">
                     <h5>USER FLOW</h4>
-                        <img class="img_prj" src="assets/img/projekt/userflow.png" alt="Flödesschema - 'User flow'" />
+                        <img class="img_prj" src="assets/img/projekt/userflow.png" alt="Bild på Flödesschema - 'User flow'" />
                 </div>
             </div>
             <!-- right image -->
@@ -191,16 +260,19 @@
                 <div class="flex flex-column flex-align-self-center"
                     style="width: 35rem; max-width: 80%; margin-left: 1rem;">
                     <h5 class="text-right-align">REDOVISNING</h5>
-                    <img class="img_prj" src="assets/img/projekt/audience.png" alt="Foto av Ragna och Erika under deras redovisning på praktiken" />
+                    <img class="img_prj" src="assets/img/projekt/audience.png" alt="Foto av Ragna och Erika under redovisning på praktiken" />
                 </div>
             </div>
         </div>
 
     </section>
     </div>
-    
-
 </body>
+
+<!-- ====================
+     FOOTER
+   ==================== -->
+
 <footer class="footer padding-1">
     <p>© Photos Ragna. Peas on earth!</p>
     <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" />
