--- a/utbildning.html
+++ b/utbildning.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<!-- ====================
+     HEAD
+   ==================== -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +15,9 @@
     <title>Ragna Portfolio Utbildning</title>
 </head>
 
-<!-- HEADER -->
+<!-- ====================
+     HEADER
+   ==================== -->
 
 <header class="header">
     <div class="header_med_logo">
@@ -26,6 +30,10 @@
                 Kurser
             </h1>
         </div>
+    
+    <!-- ====================
+     NAV BAR
+   ==================== -->
         <nav class="menu_box">
             <!-- <p>Meny</p> -->
             <div id="menu">
@@ -38,6 +46,9 @@
     </div>
 </header>
 
+<!-- ====================
+     BODY
+   ==================== -->
 
 <body class="body_education">
     <div class="padding-1 text-right-align">
@@ -164,6 +175,11 @@
         </section>
     </div>
 </body>
+
+<!-- ====================
+     FOOTER
+   ==================== -->
+   
 <footer class="footer padding-1">
     <p style="text-align: left;">© Photos Ragna. Peas on earth!</p>
     <img class="logo" src="/assets/img/ragnalogo.png" alt="Ragna logo" />
