Justerat text på Plint-sidan

--- a/plint.html
+++ b/plint.html
@@ -57,7 +57,7 @@
     <section class="flex flex-column">
         <div class="grid-container-2-col">
             <article class="col1 text-right-align">
-                <h3>Praktik - Plint AB</h3>
+                <h3> Plint AB <br> Praktik</h3>
                 <h3>Hur jobbar en linguist?</h3>
                 <p><b>Plint</b><br> distribuerar översättningar, dubbing <br> 
                     och annat textmaterial för rörlig media. <br> 
@@ -134,7 +134,7 @@
         </div>
         <div class="grid-container-2-col">
             <article class="col1 text-right-align">
-                <h3>Icke-deltagande observationsstudie</h3>
+                <h3>Icke-deltagande <br> observationsstudie</h3>
                 <p>Användarnas arbete med undertexter - <br> 
                     i Plints översättningsprogram - spelades in <br> 
                     anonymt med hjälp av analysverktyget Clarity.
